--- a/a/src/a/pz/a/index.html
+++ b/a/src/a/pz/a/index.html
@@ -16,11 +16,13 @@ var keys=new Uint8Array([48,0]);
 var ison=false,frameno=0,last_scr_wi=0,pause=false;
 function start(){
 	if(ison)return;
+	console.log("start")
 	ison=true;
 	$.sts.value="on";
 	ws=new WebSocket("ws://"+location.host+"/pz.a.porta");
 	ws.binaryType="arraybuffer";
 	ws.onopen=function(e){
+		console.log("open");
 		p(" porta");
 		compile();
 //		ws.send(keys);
@@ -29,14 +31,13 @@ function start(){
 		onframe();
 		var ua=new DataView(e.data);
 		var cmd=ua.getUint8(0);
+//		console.log("message "+cmd);
 //		console.log("command "+cmd);
 		var dat=e.data.slice(1);
 		if(cmd==48){//refresh display
 			frameno++;
 			$.recvsize.value="frame: "+frameno+"  "+e.data.byteLength+" B  "+onframe.fps+" fps";
 			var b64=base64ArrayBuffer(dat);
-			$.scr.src='data:image/png;base64,'+b64;
-			$.scr.onload=function(){ws.send(keys);}
 //			if(last_scr_wi!=$.scr.width){//scale display x2
 //				$.scr.width*=3;
 //				last_scr_wi=$.scr.width;
@@ -44,6 +45,13 @@ function start(){
 			$.f2.value='';
 //			console.log("send keys "+keys);
 			$.sts.value=keys[1];
+//			console.log(b64);
+			$.scr.src='data:image/png;base64,'+b64;
+//			ws.send(keys);
+			$.scr.onload=function(){
+//				console.log("send keys")
+				ws.send(keys);
+			}
 			return;
 		}else if(cmd==49){//text to f1 compile status
 			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
@@ -62,15 +70,17 @@ function start(){
 			pause=true;
 			var str=String.fromCharCode.apply(null,new Uint8Array(dat));
 			$.f1.value=str;
-			//console.log(str);
+//			console.log(str);
 			return;
 		}
 	};
-	ws.onerror=function(e){console.log("websocket error");};
-	compile();
+	ws.onerror=function(e){
+		console.log("websocket error");
+	};
 	$.scr.focus();
 }
 function stop(){
+	console.log("close");
 	ison=false;
 	ws.close();
 	$.outp.value="";
@@ -78,6 +88,7 @@ function stop(){
 //	$.scr.focus();
 }
 function compile(){
+	console.log("compile");
 	start();
 	ws.send("1"+$.src.value);
 	$.scr.focus();
@@ -101,69 +112,108 @@ onload=start;
 </script>
 <textarea id=src spellcheck=false>
 {
-@inline rects.upd()
-@inline rects.drw()
-@inline dots.drw()
-@inline dots.upd()
-eof eof
-def dots
-[    yx    rgb ]{4
-  0x7840 0x800
-  0x7951 0x080
-  0x7a62 0x008
-  0x7b73 0x000
+@inline text.drw()
+eof eof eof
+def text.drw(){
+  foo(texts){
+    var n
+    ldc(n text)
+    lp(n){
+      var bmp
+      ldc(bmp text)
+      @inline print_bmp_4x4(dest_addr width height add_after_line bmp rgb)
+      sub(dest_addr add_after_glyph)
+    }
+  }
 }
+def print_bmp_4x4(scr wi hi ln bmp rgb){
+  lp(hi){
+    lp(wi){
+      shf(bmp -1)
+      @ifn stc(scr rgb)
+      @ifz inc(scr)
+      @ifp inc(scr)
+    }
+    add(scr ln)
+  }
+}
+def texts
+[ dest_addr    width   height   add_after_line   text   rgb   add_after_glyph ]{2
+   0x3040       4        4         252           txt   0xf00       0x3fc   
+   0x3440       4        4         252           os    0xf00       0x3fc   
+} 
+eof
+def txt[u16]{6
+  0xffff 0x0175 0x0767 0x0043 0x0043 0x0252 0x0126
+  0xffff
+}
+eof
+def os[bmp4x4]{1
+   0xffff
+}
+eof
+def pl(dest_addr width height add_after_line text rgb add_after_glyph){
+  var n
+  ldc(n text)
+  var bmp
+  lp(n){
+    ldc(bmp text)
+    @inline print_bmp_4x4(dest_addr width height add_after_line bmp rgb)
+    sub(dest_addr j)
+  }
+}
+
 def rects
-[   yyxx  rgb   wi    hi   ln ]{ 3
+[   yx    rgb   wi    hi   ln     ]{ 3
   0x1400 0x0ff 256    80  0x24
   0x1000 0xf00 0x30  0x40 0x24
   0x5800 0x00f 0x30   50  0x23
 }
-eof eof eof
+eof
 def rects.upd(){
+  var m
   li(m 0x40)
-  fow(rects d e f g h){
-    inc(h)
-    @debug tx(p h)
-    tx(i h)
+  fow(rects){
+    inc(ln)
+    var i
+    tx(i ln)
     sub(i m)
-    @ifp li(h 0x10)
+    @ifp li(ln 0x10)
   }
 }
 def rects.drw(){
-  foo(rects d e f g h){
-    lp(g){
-      lp(f){
-        stc(d e)
+  foo(rects){
+    lp(hi){
+      lp(wi){
+        stc(yx rgb)
       }
-      add(d h)
+      add(yx ln)
     }
   }
 }
+def dots
+[   yx    dyx    rgb ]{4
+  0x7840 0x0001 0x800
+  0x7951 0x0002 0x080
+  0x7a62 0x0003 0x008
+  0x7b73 0x0004 0x088
+}
 def dots.drw(){
-  foo(dots d e){
-    st(d e)
+  foo(dots){
+    st(yx rgb)
   }
 }
 def dots.upd(){
-  li(f 0x7f00)
-  fow(dots d e){
-    inc(d)
-    tx(g d)
-    sub(g f)
-    @ifp li(d 0x0800)
+  var g
+  li(g 0x7f00)
+  fow(dots){
+    add(yx dyx)
+    var h
+    tx(h yx)
+    sub(h g)
+    @ifp li(yx 0x0800)
   }
 }
-eof
-def dot(a b){st(a b)}
-def line(a b c){
-  lp(c){
-    stc(a b)
-    inc(b)
-  }
-}
-eof
-
 def red 0xf00
 def green 0xf0
 def blue 0xf
@@ -284,4 +334,80 @@ li a 400
 draw:
   lp c
     stc a d nxt ret
+
+
+
+
+
+
+
+{
+@inline rects.upd()
+@inline rects.drw()
+@inline dots.drw()
+@inline dots.upd()
+eof eof
+def dots
+[    yx    rgb ]{4
+  0x7840 0x800
+  0x7951 0x080
+  0x7a62 0x008
+  0x7b73 0x000
+}
+def rects
+[   yyxx  rgb   wi    hi   ln ]{ 3
+  0x1400 0x0ff 256    80  0x24
+  0x1000 0xf00 0x30  0x40 0x24
+  0x5800 0x00f 0x30   50  0x23
+}
+eof eof eof
+def rects.upd(){
+  li(m 0x40)
+  fow(rects d e f g h){
+    inc(h)
+    @debug tx(p h)
+    tx(i h)
+    sub(i m)
+    @ifp li(h 0x10)
+  }
+}
+def rects.drw(){
+  foo(rects d e f g h){
+    lp(g){
+      lp(f){
+        stc(d e)
+      }
+      add(d h)
+    }
+  }
+}
+def dots.drw(){
+  foo(dots d e){
+    st(d e)
+  }
+}
+def dots.upd(){
+  li(f 0x7f00)
+  fow(dots d e){
+    inc(d)
+    tx(g d)
+    sub(g f)
+    @ifp li(d 0x0800)
+  }
+}
+eof
+def dot(a b){st(a b)}
+def line(a b c){
+  lp(c){
+    stc(a b)
+    inc(b)
+  }
+}
+eof
+
+def red 0xf00
+def green 0xf0
+def blue 0xf
+def eof 0xffff
+}
 ..
