--- a/a/src/a/pz/a/index.html
+++ b/a/src/a/pz/a/index.html
@@ -112,6 +112,8 @@ onload=start;
 </script>
 <textarea id=src spellcheck=false>
 {
+@inline rects.drw()
+@inline rects.upd()
 @inline text.drw()
 eof eof eof
 def text.drw(){
