--- a/game.html
+++ b/game.html
@@ -1,6 +1,6 @@
 <title>game</title>
 <body style=text-align:center;background:#000040>
-<applet id=app mayscript="mayscript" scriptable=true tabindex=0 codebase=/bin code=d3.applet width=512 height=768 style="border:1px solid green">
+<applet id=app mayscript="mayscript" scriptable=true tabindex=0 codebase=bin code=d3.applet width=512 height=768 style="border:1px solid green">
 <script>
 $=document.all;
 $.app.focus();
