--- a/howto/html5/sound/sound.html
+++ b/howto/html5/sound/sound.html
@@ -1,11 +1,12 @@
 <script>
 var context = new webkitAudioContext();
-var bufferSize = 4096;
+var bufferSize = 4096*4;
 var whiteNoise = context.createScriptProcessor(bufferSize, 1, 1);
 whiteNoise.onaudioprocess = function(e) {
+	console.log("onprocess");
     var output = e.outputBuffer.getChannelData(0);
     for (var i = 0; i < bufferSize; i++) {
-        output[i] = Math.random() * 2 - 1;
+        output[i] = Math.random() * 2 - 1+i/bufferSize;
     }
 }
 whiteNoise.connect(context.destination);
