--- a/src/a/tinitus/index.html
+++ b/src/a/tinitus/index.html
@@ -3,7 +3,9 @@ tinitus 2 <output id=sts></output>
 <script>
 console.debug("hello");
 $=document.all;
+var received_buffers=[];
 var ison=false,frameno=0,pause=false;
+var was_lag=false;
 function start(){
 	if(ison)return;
 	console.log("start")
@@ -12,27 +14,42 @@ function start(){
 	ws=new WebSocket("ws://"+location.host+"/tinitus.porta");
 	ws.binaryType="arraybuffer";
 
-	var context=null;
-	if('webkitAudioContext' in window) {
-		context = new webkitAudioContext();
-	}else{
-		context = new AudioContext();
+	var audio_context=null;
+	if('webkitAudioContext' in window)audio_context=new webkitAudioContext();
+	else audio_context=new AudioContext();
+	
+	var buffer_size=4096*4;
+	var noise=audio_context.createScriptProcessor(buffer_size,1,1);
+	noise.onaudioprocess=function(e){
+//		console.log("onprocess");
+		onframe();
+	    if(received_buffers.length==0){
+			console.log(" !!!!!!!!!!!!! lag");
+			was_lag=true;
+		    var output=e.outputBuffer.getChannelData(0);
+		    for(var i=0;i<buffer_size;i++) {
+		    	output[i]=0;
+		    }
+			return;
+		}
+	    var nextbufarray=new Int8Array(received_buffers[0]);
+	    received_buffers.shift();
+	    var output=e.outputBuffer.getChannelData(0);
+	    for(var i=0;i<buffer_size;i++) {
+	    	output[i]=nextbufarray[i];
+	    }
 	}
-	var audioSource = context.createBufferSource();
-	audioSource.connect( context.destination );
-
+	noise.connect(audio_context.destination);
+	
+	
 	ws.onopen=function(e){
 		console.log("open");
 	}
 	
 	ws.onmessage=function(e){
-		onframe();
-		console.log("data length: "+e.data.byteLength);
-		context.decodeAudioData( e.data, function( res ) {
-			console.log("play data: "+e.data.byteLength);
-	        audioSource.buffer = res;
-	        audioSource.noteOn( 0 );
-		} );
+		received_buffers[received_buffers.length]=e.data;
+//		console.log(received_buffers[received_buffers.length-1]);
+		console.log("buffered: "+received_buffers.length);
 	};
 	ws.onerror=function(e){
 		console.log("websocket error");
@@ -46,13 +63,29 @@ function stop(){
 }
 function p(txt){$.sts.value+=txt;}
 function onframe(){
+	frameno++;
 	var t=new Date().getTime();
 	var dt=t-onframe.t0;
-	if(dt>1000){
+//	console.log(dt);
+	if(dt>1000){	
 		onframe.t0=t;
 		var df=frameno-onframe.f0;
 		onframe.f0=frameno;
-		onframe.fps=Math.floor(dt==0?0:df*1000/dt);
+		onframe.fps=dt==0?0:df*1000/dt;
+		console.log("fps:"+onframe.fps.toFixed(1));
+
+//		console.log(" ****** tick ");
+		if(received_buffers.length>2){
+	    	console.log(" ******  toofast ");
+	    	ws.send(new Uint8Array([49]));
+	    	return;
+	    }	
+	    if(received_buffers.length<3){
+	    	console.log(" ******  tooslow ");
+	    	ws.send(new Uint8Array([48]));
+	    	was_lag=false;
+	    	return;
+	    }
 	}
 }
 onframe.t0=0;
